# samp-var-comb

./: .gitignore  README.md  SPXTR.csv  reproduce.bat  reproduce.sh
detail/probabilistic/: .gitignore  CMakeLists.txt  Makefile  Makefile.win  directories.R  download_external_dependencies.R  file_manipulation.R  rename.sh  shared_vars.mk
detail/probabilistic/probabilistic/: DESCRIPTION  NAMESPACE  cleanup  cleanup.win  configure  configure.win
detail/probabilistic/probabilistic/R/: ARARCHTX.R  CensoredLogScore.R  Ensemble.R  LogScore.R  SIR.R  TickScore.R  average_score.R  dist_mixture.R  draw_observations.R  empirical_coverage.R  fit.R  forecast.R  forward.R  libtorch_dict.R  libtorch_model.R  parameters.R  performance_divergence_draws.R  plot_list.R  probabilistic_model.R  probabilistic_score.R  sampling_distribution_draws.R  serialise.R  shapely_parameter.R  tdist.R  torch_rng.R  train.R  truncated_kernel_clt.R
detail/probabilistic/probabilistic/src/: .gitignore  CMakeLists.txt  Makefile  Makefile.win  MakefileExportVariables  MakefileNested  MakefileNested.win  boost.cmake  build_type.cmake  dummy.cpp  install.libs.R  print_diagnostics.cmake  pytorch_footer.cmake  pytorch_header.cmake
detail/probabilistic/probabilistic/src/R_data_translation/include/R_data_translation/: R_list_to_libtorch_dict.hpp  libtorch_dict_to_R_list.hpp
detail/probabilistic/probabilistic/src/R_data_translation/src/: R_list_to_libtorch_dict.cpp  libtorch_dict_to_R_list.cpp
detail/probabilistic/probabilistic/src/R_init_libprobabilistic/: R_init_libprobabilistic.cpp
detail/probabilistic/probabilistic/src/R_modelling/include/R_modelling/: buffers.hpp  fit.hpp  forward.hpp  parameterisation.hpp  torch_rng.hpp
detail/probabilistic/probabilistic/src/R_modelling/src/: ARARCHTX.cpp  CensoredLogScore.cpp  Ensemble.cpp  LogScore.cpp  TickScore.cpp  TruncatedKernelCLT.cpp  average_score.cpp  buffers.cpp  draw_observations.cpp  empirical_coverage.cpp  fit.cpp  forward.cpp  parameterisation.cpp  parameters.cpp  performance_divergence_draws.cpp  sampling_distribution_draws.cpp  serialise.cpp  torch_rng.cpp
detail/probabilistic/probabilistic/src/R_protect_guard/: CMakeLists.txt
detail/probabilistic/probabilistic/src/R_protect_guard/include/: R_protect_guard.hpp
detail/probabilistic/probabilistic/src/R_rng_guard/: CMakeLists.txt
detail/probabilistic/probabilistic/src/R_rng_guard/include/: R_rng_guard.hpp
detail/probabilistic/probabilistic/src/R_support/: CMakeLists.txt
detail/probabilistic/probabilistic/src/R_support/include/R_ext/: RS.h
detail/probabilistic/probabilistic/src/R_support/include/R_support/: function.hpp  handle_exception.hpp  memory.hpp
detail/probabilistic/probabilistic/src/R_support/src/: function.cpp
detail/probabilistic/probabilistic/src/boost_log_R/: CMakeLists.txt
detail/probabilistic/probabilistic/src/boost_log_R/include/boost_log_R/: filter.hpp  log_exception.hpp  sink_backend.hpp  string_to_severity_level.hpp
detail/probabilistic/probabilistic/src/boost_log_R/src/: filter.cpp  log_exception.cpp  sink_backend.cpp  string_to_severity_level.cpp
detail/probabilistic/probabilistic/src/data_translation/: CMakeLists.txt
detail/probabilistic/probabilistic/src/data_translation/include/data_translation/: libtorch_dict_to_R_list.hpp  libtorch_tensor_to_R_list.hpp  type.hpp
detail/probabilistic/probabilistic/src/data_translation/src/: libtorch_dict_to_R_list.cpp  libtorch_tensor_to_R_list.cpp
detail/probabilistic/probabilistic/src/dll_visibility/: dll_visibility.h
detail/probabilistic/probabilistic/src/libtorch_mingw_deps/: CMakeLists.txt
detail/probabilistic/probabilistic/src/libtorch_mingw_deps/include/: assert_fail.h
detail/probabilistic/probabilistic/src/libtorch_mingw_deps/src/: assert_fail.c
detail/probabilistic/probabilistic/src/libtorch_support/: CMakeLists.txt
detail/probabilistic/probabilistic/src/libtorch_support/include/libtorch_support/: Buffers.hpp  Parameterisation.hpp  Tensor.h  TensorIndexing.h  containers.hpp  derivatives.hpp  erfcx.hpp  indexing.hpp  logsubexp.hpp  missing.hpp  moments.hpp  reparameterisations.hpp  standard_normal_log_cdf.hpp  (+1 more)
detail/probabilistic/probabilistic/src/libtorch_support/src/: Buffers.cpp  Parameterisation.cpp  derivatives.cpp  erfcx.cpp  indexing.cpp  logsubexp.cpp  missing.cpp  moments.cpp  reparameterisations.cpp  standard_normal_log_cdf.cpp  time_series.cpp
detail/probabilistic/probabilistic/src/libtorch_test/include/: create_tensor.hpp
detail/probabilistic/probabilistic/src/libtorch_test/src/: create_tensor.cpp
detail/probabilistic/probabilistic/src/log/: CMakeLists.txt
detail/probabilistic/probabilistic/src/modelling/: CMakeLists.txt
detail/probabilistic/probabilistic/src/modelling/src/: ARARCHTX.cpp  AutoRegressive.cpp  CensoredLogScore.cpp  Distribution.cpp  Ensemble.cpp  LogNormal.cpp  LogScore.cpp  Mixture.cpp  Normal.cpp  NormalVector.cpp  ProbabilisticModule.cpp  Quadratic.cpp  SamplingDistribution.cpp  ScoringRule.cpp  ShapelyModule.cpp  TickScore.cpp  TranslatedDistribution.cpp  TruncatedKernelCLT.cpp  empirical_coverage.cpp  fit.cpp  sample_size.cpp  window_average.cpp
detail/probabilistic/probabilistic/src/std_specialisations/: CMakeLists.txt
detail/probabilistic/probabilistic/tests/: libtorch_test_create_tensor.R
detail/probabilistic/test/: CMakeLists.txt  seed_torch_rng.cpp  test_main.cpp
detail/probabilistic/test/dummy/src/: dummy.cpp
detail/probabilistic/test/include/: seed_torch_rng.hpp
detail/probabilistic/test/include/covid_data_test_support/: R_embedded.hpp  constants.hpp  covid_test_data_loader.hpp
detail/probabilistic/test/libtorch/src/: create_tensor.cpp
detail/probabilistic/test/libtorch_support/src/: Parameterisation_tests.cpp  derivatives_tests.cpp  erfcxs_tests.cpp  logsubexp_tests.cpp  reparameterisations_tests.cpp  standard_normal_log_cdf_tests.cpp
detail/probabilistic/test/modelling/distribution/src/: Mixture_tests.cpp  Normal_tests.cpp  interval_tests.cpp
detail/probabilistic/test/modelling/model/src/: ProbabilisticModule_tests.cpp
(+61 files in other folders)
